# construction-inventory

./: .geminiignore  GEMINI.md  docker-compose.yml  init_star_schema.sql  main.py  pyproject.toml  start.sh  stop.sh
backend/: db.sqlite3
backend/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
backend/inventory/migrations/: 0001_initial.py
backend/inventory_backend/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: MaterialForm.jsx
notes/: notes.md  notes_old.md
