[project]
name = "construction-db"
version = "0.1.0"
description = "A Django and React inventory management system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref~=3.4.1",
    "django",
    "django-cors-headers~=3.13.0",
    "djangorestframework",
    "mongoengine",
    "python-dotenv>=1.1.1",
    "pytz>=2024.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
